add manifest from landing site

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -36,12 +36,12 @@ jobs:
     params:
       manifest: cg-site-compiled/manifest.yml
       path: cg-site-compiled
-      current_app_name: docs
+      current_app_name: landing
     on_failure:
       put: slack
       params:
         text: |
-          :x: FAILED to deploy cg-docs to Production
+          :x: FAILED to deploy cg-site to Production
           <$ATC_EXTERNAL_URL/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
         channel: {{slack-channel}}
         username: {{slack-username}}
@@ -50,7 +50,7 @@ jobs:
       put: slack
       params:
         text: |
-          :white_check_mark: Successfully deployed cg-docs to Production
+          :white_check_mark: Successfully deployed cg-site to Production
           <$ATC_EXTERNAL_URL/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
         channel: {{slack-channel}}
         username: {{slack-username}}
