--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://cloud.gov"
 languageCode = "en-us"
-title = "Cloud.gov"
+title = "cloud.gov"
 
 [params]
   email = "cloud-gov-inquiries@gsa.gov"
